; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_malloc.c_faultsimPending.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_malloc.c_faultsimPending.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }

@memfault = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @faultsimPending to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @faultsimPending() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @memfault, i32 0, i32 1), align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @memfault, i32 0, i32 0), align 8
  store i32 %5, i32* %1, align 4
  br label %7

6:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %7

7:                                                ; preds = %6, %4
  %8 = load i32, i32* %1, align 4
  ret i32 %8
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
